Final commit before moving out

--- a/data-analysis/main.tex
+++ b/data-analysis/main.tex
@@ -1,4 +1,5 @@
 \documentclass{beamer}
+%\setbeamertemplate{navigation symbols}{}
 
 \usepackage{graphicx}
 
@@ -6,8 +7,8 @@
 \author{Henry Wilde}
 \institute{Cardiff University School of Mathematics}
 
-% \usetheme{Hannover}
-\usecolortheme{seahorse}
+\usetheme{metropolis}
+%\usecolortheme{seahorse}
 \begin{document}
 
 \begin{frame}
