--- a/data-analysis/sections/diabetes/main.tex
+++ b/data-analysis/sections/diabetes/main.tex
@@ -1,3 +1,4 @@
+\section{Taking a slice: diabetic patient analysis}
 \graphicspath{{./img/diabetes/}}
 
 \begin{frame}
@@ -30,8 +31,10 @@
 \input{./sections/diabetes/variation/main.tex}
 \input{./sections/diabetes/components/main.tex}
 \input{./sections/diabetes/correlation/main.tex}
+\section{Measuring resource consumption}
 \input{./sections/diabetes/consumption/main.tex}
 
+\section{Conclusions}
 \begin{frame}
     \frametitle{Conclusions}
 
