--- a/data-analysis/sections/general/main.tex
+++ b/data-analysis/sections/general/main.tex
@@ -15,5 +15,7 @@
     \end{itemize}
 \end{frame}
 
+\section{Distributions of attributes}
 \input{./sections/general/variables/main.tex}
+\section{Measuring variation and importance}
 \input{./sections/general/variation/main.tex}
