Finish first draft

--- a/wmc-data/main.tex
+++ b/wmc-data/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{beamer}
+\documentclass[11pt]{beamer}
 
 \usepackage{animate}
 \usepackage{booktabs}
@@ -6,7 +6,7 @@
 \usepackage{subcaption}
 \usepackage{graphicx}
 \usepackage[backend=bibtex, style=numeric]{biblatex}
-    \addbibresource{../references}
+    \addbibresource{references}
 
 \usetheme{metropolis}
 
@@ -17,7 +17,6 @@
 \renewcommand*{\bibfont}{\tiny}
 \setbeamertemplate{footline}{}
 \newsavebox{\largestimage}
-
 
 \title{Understanding cost variation with clustering}
 \author{%
@@ -79,7 +78,7 @@
     \end{minipage}
 }
 
-\frame{\frametitle{An overview}
+\frame{\frametitle{Net costs}
     \makebox[\linewidth]{%
         \begin{minipage}{.8\imgwidth}
             \includegraphics[width=\linewidth]{netcost_kde.pdf}
@@ -92,14 +91,14 @@
     }
 }
 
-\frame{\frametitle{An overview}
+\frame{\frametitle{Variation and importance}
     \includegraphics[width=\linewidth]{cost_bubble.pdf}
 }
 
 
 \section{Diabetic patient analysis}
 \graphicspath{{img/diabetes/}}
-\frame{\frametitle{Diabetic overview}
+\frame{\frametitle{An overview}
     \begin{minipage}{.5\linewidth}
         \makebox[\linewidth]{%
             \includegraphics[width=\linewidth]{nspells_bar.pdf}
@@ -123,7 +122,7 @@
     \end{minipage}
 }
 
-\frame{\frametitle{An overview}
+\frame{\frametitle{Net costs}
     \makebox[\linewidth]{%
         \begin{minipage}{.8\imgwidth}
             \includegraphics[width=\linewidth]{netcost_kde.pdf}
@@ -136,9 +135,52 @@
     }
 }
 
-\frame{\frametitle{An overview}
+\frame{\frametitle{Variation and importance}
     \includegraphics[width=\linewidth]{cost_bubble.pdf}
 }
 
+
+\section{Partitioning the data}
+
+\frame{\frametitle{Subsets in the data}
+    Traditional methods include~\footfullcite{Nolte2003}:
+
+    \begin{itemize}
+        \item condition-specific populations
+        \item segmenting by age
+    \end{itemize}
+
+    \pause%
+    However, these methods have the common flaw of under-representing groups of
+    healthcare users~\footfullcite{Vuik2016}.
+}
+
+\frame{\frametitle{Misrepresentation}
+    \includegraphics[width=\linewidth]{age_bar.pdf}
+}
+
+\graphicspath{{img/clustering/}}
+\frame{\frametitle{What is clustering?}
+    \begin{figure}[htbp]
+        \centering
+        \animategraphics[loop,
+                         controls,
+                         width=.5\imgwidth]{1}{kmeans-}{0}{12}
+    \end{figure}
+
+    \footnotesize Image taken from \url{%
+        https://www.jeremyjordan.me/grouping-data-points-with-k-means-clustering/}
+}
+
+\frame{\frametitle{Clustering with healthcare data}
+
+    \small{%
+    \begin{itemize}
+        \item \fullcite{Kalyani2012}
+        \item \fullcite{Rebuge2012}
+        \item \fullcite{Vuik2016}
+    \end{itemize}
+    }
+}
 
 \end{document}
