--- a/wmc-data/main.tex
+++ b/wmc-data/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{beamer}
+\documentclass[10pt]{beamer}
 
 \usepackage{animate}
 \usepackage{booktabs}
@@ -20,8 +20,13 @@
 
 \title{Understanding cost variation with clustering}
 \author{%
-    Henry Wilde \\
-    \small{\textit{Supervised by:} Dr Jonathan Gillard and Dr Vincent Knight}
+    \large{Henry Wilde}\\\\
+    \small{%
+        \textit{Supervised by:} Dr Jonathan Gillard and Dr Vincent Knight
+    }\\
+    \small{%
+        \textit{In partnership with:} Kendal Smith (Head of Financial Flows)
+    }
 }
 \institute{%
     \vfill%
@@ -30,6 +35,7 @@
     \hspace{5pt}%
     \includegraphics[height=.2\paperheight]{img/cthb_logo.jpg}
 }
+\date{}
 
 \begin{document}
 
@@ -51,134 +57,8 @@
     \end{table}
 }
 
-\section{An overview of the data}
-\graphicspath{{img/overview/}}
-\frame{\frametitle{An overview}
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{nspells_bar.pdf}
-        }
-    \end{minipage}%
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{los_bar.pdf}
-        }
-    \end{minipage}
-
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{ndiag_bar.pdf}
-        }
-    \end{minipage}%
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{nproc_bar.pdf}
-        }
-    \end{minipage}
-}
-
-\frame{\frametitle{Net costs}
-    \makebox[\linewidth]{%
-        \begin{minipage}{.8\imgwidth}
-            \includegraphics[width=\linewidth]{netcost_kde.pdf}
-        \end{minipage}%
-        \begin{minipage}{.2\paperwidth}
-            \resizebox{\linewidth}{!}{%
-                \input{tex/netcost.tex}
-            }
-        \end{minipage}
-    }
-}
-
-\frame{\frametitle{Variation and importance}
-    \includegraphics[width=\linewidth]{cost_bubble.pdf}
-}
-
-
-\section{Diabetic patient analysis}
-\graphicspath{{img/diabetes/}}
-\frame{\frametitle{An overview}
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{nspells_bar.pdf}
-        }
-    \end{minipage}%
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{los_bar.pdf}
-        }
-    \end{minipage}
-
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{ndiag_bar.pdf}
-        }
-    \end{minipage}%
-    \begin{minipage}{.5\linewidth}
-        \makebox[\linewidth]{%
-            \includegraphics[width=\linewidth]{nproc_bar.pdf}
-        }
-    \end{minipage}
-}
-
-\frame{\frametitle{Net costs}
-    \makebox[\linewidth]{%
-        \begin{minipage}{.8\imgwidth}
-            \includegraphics[width=\linewidth]{netcost_kde.pdf}
-        \end{minipage}%
-        \begin{minipage}{.2\paperwidth}
-            \resizebox{\linewidth}{!}{%
-                \input{tex/diab_netcost.tex}
-            }
-        \end{minipage}
-    }
-}
-
-\frame{\frametitle{Variation and importance}
-    \includegraphics[width=\linewidth]{cost_bubble.pdf}
-}
-
-
-\section{Partitioning the data}
-
-\frame{\frametitle{Subsets in the data}
-    Traditional methods include~\footfullcite{Nolte2003}:
-
-    \begin{itemize}
-        \item condition-specific populations
-        \item segmenting by age
-    \end{itemize}
-
-    However, these methods have the common flaw of under-representing groups of
-    healthcare users~\footfullcite{Vuik2016}.
-}
-
-\frame{\frametitle{Misrepresentation}
-    \includegraphics[width=\linewidth]{age_bar.pdf}
-}
-
-\graphicspath{{img/clustering/}}
-\frame{\frametitle{What is clustering?}
-    \begin{figure}[htbp]
-        \centering
-        \animategraphics[loop,
-                         controls,
-                         width=.5\imgwidth]{1}{kmeans-}{0}{12}
-    \end{figure}
-
-    \footnotesize Image taken from \url{%
-        https://www.jeremyjordan.me/grouping-data-points-with-k-means-clustering/}
-}
-
-\frame{\frametitle{Clustering with healthcare data}
-
-    \small{%
-    \begin{itemize}
-        \item \fullcite{Kalyani2012}
-        \item \fullcite{Rebuge2012}
-        \item \fullcite{Vuik2016}
-    \end{itemize}
-    }
-}
+%\input{sections/overview.tex}
+\input{sections/diabetes.tex}
+\input{sections/clustering.tex}
 
 \end{document}
