Final adjustments to slides.

--- a/wmc-data/main.tex
+++ b/wmc-data/main.tex
@@ -61,4 +61,13 @@
 \input{sections/diabetes.tex}
 \input{sections/clustering.tex}
 
+\frame{\frametitle{Take home message}
+    \Large
+    \begin{itemize}
+        \item Don't impose a framework
+        \item Data-driven solutions
+        \item Let the data speak for itself
+    \end{itemize}
+}
+
 \end{document}
