--- a/wmc-data/sections/clustering.tex
+++ b/wmc-data/sections/clustering.tex
@@ -12,11 +12,11 @@
     healthcare users~\footfullcite{Vuik2016}.
 }
 
-\frame{\frametitle{Misrepresentation}
+\frame{\frametitle{Misrepresentation \-- age}
     \includegraphics[width=\linewidth]{age_bar.pdf}
 }
 
-\frame{\frametitle{Misrepresentation}
+\frame{\frametitle{Misrepresentation \-- net cost of spell}
     \resizebox{\textwidth}{!}{%
         \input{tex/split_age_summary.tex}
     }
@@ -39,12 +39,15 @@
 
 \frame{\frametitle{Clustering with healthcare data}
 
-    \small{%
     \begin{itemize}
-        \item \fullcite{Kalyani2012}
-        \item \fullcite{Rebuge2012}
-        \item \fullcite{Vuik2016}
+        \item Patient pathways
+            \begin{itemize}
+                \item[] \fullcite{Rebuge2012}
+            \end{itemize}
+        \item Utilisation patterns
+            \begin{itemize}
+                \item[] \fullcite{Vuik2016}
+            \end{itemize}
     \end{itemize}
-    }
 }
 
