Change email address.

--- a/ons-edo/main.tex
+++ b/ons-edo/main.tex
@@ -408,7 +408,7 @@
     Henry Wilde
         \begin{itemize}
             \item[] \alert{Twitter:} @daffidwilde
-            \item[] \alert{Email:} henrydavidwilde@gmail.com
+            \item[] \alert{Email:} wildehd@cardiff.ac.uk
             \item[] \alert{Repository:} \url{%
                 https://github.com/daffidwilde/edo
             }
